[package]
name = "antc"
version = "0.1.0"
edition = "2024"

[lib]
name = "ant_cranelift_compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
ant_id = { git = "https://github.com/ant-pl/TypedAnt.git", package = "id" }
ant_typed_ast = { git = "https://github.com/ant-pl/TypedAnt.git", package = "typed_ast" }
ant_typed_module = { git = "https://github.com/ant-pl/TypedAnt.git", package = "typed_module" }
ant_ty = { git = "https://github.com/ant-pl/TypedAnt.git", package = "ty" }
ant_crate_def = { git = "https://github.com/ant-pl/TypedAnt.git", package = "ant_crate_def" }
ant_name_resolver = { git = "https://github.com/ant-pl/TypedAnt.git", package = "name_resolver" }
ant_type_checker = { git = "https://github.com/ant-pl/TypedAnt.git", package = "type_checker" }
ant_ast = { git = "https://github.com/ant-pl/TypedAnt.git", package = "ast" }
ant_parser = { git = "https://github.com/ant-pl/TypedAnt.git", package = "parser" }
ant_lexer = { git = "https://github.com/ant-pl/TypedAnt.git", package = "lexer" }
ant_token = { git = "https://github.com/ant-pl/TypedAnt.git", package = "token" }

# Cranelift dependencies for object file generation
cranelift = "0.110.0"
cranelift-module = "0.110.0"
cranelift-native = "0.110.0"
cranelift-codegen = "0.110.0"
cranelift-frontend = "0.110.0"
cranelift-object = "0.110.0"
cc = "1.2.41"
tempfile = "3.23.0"

clap = { version = "4.5.47", features = ["derive"] }
once_cell = "1.21.3"
indexmap = "2.13.0"
bigdecimal = "0.4.10"

[features]
debug = []
